2010-09-09  ddegroot

	* [r1839] ChangeLog, NEWS,
	  doc/03_Building_and_Installation_Guide.doc,
	  doc/05_New_Features.doc, doc/06_Frequently_Asked_Questions.doc,
	  doc/07_Supported_Operating_Systems.doc, src/chan_sccp.c,
	  src/sccp_cli.c: Added SCCPDEVICE and SCCPLINE dialplan functions
	  to chan_sccp.c

2010-09-08  marcelloceschia

	* [r1838] src/sccp_socket.c: fixes: ast_poll for asterisk 1.4.22

2010-09-07  progs

	* [r1837] src/sccp_cli.c, src/sccp_cli.h: fix warnings

2010-09-07  ddegroot

	* [r1836] src/sccp_cli.h: Added CLI Command Completion back in for
	  Asterisk 1.4

	* [r1835] src/sccp_cli.c, src/sccp_cli.h: Asterisk 1.4 fix for CLI

	* [r1834] src/sccp_cli.c, src/sccp_cli.h, src/sccp_utils.c,
	  src/sccp_utils.h: Simplified cli programming via MACRO to combat
	  asterisk version differences
	  Fixed sccp debug category printing
	  Fixed sccp show line tab-completion
	  Added new sccp_utils function implode/explode (also know as split
	  and join)

2010-09-07  marcelloceschia

	* [r1833] src/sccp_protocol.h:

	* [r1832] src/sccp_channel.c: fixes: unsupported formate request by
	  asterisk

2010-09-04  marcelloceschia

	* [r1831] aclocal.m4, configure, src/Makefile.in, src/chan_sccp.h,
	  src/sccp_actions.c, src/sccp_channel.c, src/sccp_channel.h,
	  src/sccp_cli.c, src/sccp_config.c, src/sccp_device.c,
	  src/sccp_features.c, src/sccp_pbx.c, src/sccp_protocol.h: playing
	  with protocol version 11

	* [r1830] Makefile.in, autoconf/config.guess, autoconf/config.sub,
	  configure, configure.ac, doc/Makefile.in: fixes configure options

2010-09-02  marcelloceschia

	* [r1829] src/sccp_line.c: fixes: nested extern declaration

2010-09-02  ddegroot

	* [r1828] src/sccp_channel.c: Simplified sccp_channel_forward

	* [r1827] src/sccp_channel.c: sccp_channel.c replaced
	  ast_set_callerid

	* [r1826] src/sccp_channel.c, src/sccp_channel.h: Update
	  sccp_channel_forward for callerid information

2010-09-02  marcelloceschia
